--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-saga": "^1.2.1",
+    "redux-saga-test-plan": "^4.0.6",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
