--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --coverage",
     "eject": "react-scripts eject",
-    "typecheck": "npx tsc"
+    "typecheck": "npx tsc --noEmit"
   },
   "eslintConfig": {
     "extends": [
